src/objects/Credit_Card_Expiry_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Create_ARR_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create ARR Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Before_Expiry__c</fullName>
        <label>Days Before Expiry</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email To Customer</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Card Expiry Config</label>
</CustomObject>